# requests-consul

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  docs-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: Makefile
docs/source/: adapters.rst  conf.py  index.rst
requests_consul/adapters/: __init__.py  service.py
tests/: test_consulserviceadapter.py
tests/fixtures/: dc1.json  dc2.json
