[metadata]
name = requests-consul
author = Allegro Group - Asgard
author-email = asgard@allegrogroup.com
home-page = http://allegro.tech/open-source/
summary = Requests Consul discovery service adapter
license = Apache 2
classifier =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4

[files]
packages =
  requests_consul

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
